<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.SesionActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="0"
                android:layout_marginBottom="-20dp"
                android:src="@drawable/logoinicio2" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="30dp"
                android:paddingVertical="10dp">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"> <!-- Desactiva la etiqueta flotante -->
                    <EditText
                        android:id="@+id/logTxtCorreo"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="40dp"
                        android:layout_marginBottom="25dp"
                        android:background="@drawable/custom_edittext"
                        android:drawableStart="@drawable/baseline_person_outline_24"
                        android:drawablePadding="10dp"
                        android:drawableTint="@color/colorbase"
                        android:hint="@string/logTxtCorreo"
                        android:inputType="textEmailAddress"
                        android:padding="12dp"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true">
                    <EditText
                        android:id="@+id/logTxtClave"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="40dp"
                        android:layout_marginBottom="25dp"
                        android:background="@drawable/custom_edittext"
                        android:drawableStart="@drawable/baseline_lock_24"
                        android:drawablePadding="10dp"
                        android:drawableTint="@color/colorbase"
                        android:hint="@string/logTxtClave"
                        android:inputType="textPassword"
                        android:padding="12dp"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>
                <CheckBox
                    android:id="@+id/ChkSesionRecordar"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginTop="-20dp"
                    android:text="@string/ChkSesionRecordar"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
                <Button
                    android:id="@+id/btnGoogleSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"

                    android:background="@drawable/custom_button"
                    android:text="Iniciar sesión con Google"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btnIngresar"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/white"
                    android:background="@drawable/custom_button"
                    android:text="@string/BtnIngresar"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/LogTxtPregunta"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
                <Button
                    android:id="@+id/btnRegistrar"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/button_border"
                    android:text="@string/BtnRegistrar"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/LogTxtCopy"
                android:gravity="center"
                android:background="@color/colorbase"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>